--- a/foundry.toml
+++ b/foundry.toml
@@ -5,10 +5,14 @@ libs = ["lib"]
 solc = "0.8.20"
 remappings = ['@openzeppelin/contracts=lib/openzeppelin-contracts/contracts']
 
+
+[fuzz]
+seed = "0x1"
+
 [invariant]
-runs = 256
+runs = 1000
 depth = 32
-fail_on_revert = true
+fail_on_revert = false
 
 [fmt]
 bracket_spacing = true
